<resources>
    <string name="app_name">TimberNoteJava</string>

    <string name="main_note">Notes</string>
    <string name="main_task">Task</string>
    <string name="main_info">Info</string>

    <string name="info_app_info">App Information</string>
    <string name="info_find">Find App in store</string>
    <string name="info_share">Share App</string>
    <string name="info_store_link">https://play.google.com/store/apps/details?id=</string>

    <string name="notes_blank">Add your notes…</string>

    <string name="edit_change_bg">CHANGE BACKGROUND</string>

</resources>