<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    android:orientation="vertical"
    tools:context=".ui.fragment.InfoFragment">

    <View
        android:id="@+id/info_status"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white" />

    <TextView
        android:id="@+id/info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_status"
        android:background="@color/white"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/info_app_info"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/info_app_logo"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_below="@+id/info_title"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="28dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="12dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/info_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/info_share_card"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/info_app_logo"
        android:layout_marginStart="28dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="28dp"
        app:cardCornerRadius="60dp">

        <LinearLayout
            android:id="@+id/info_share"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginStart="25dp"
                android:padding="2dp"
                android:src="@drawable/svg_share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/info_share"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/info_share_card"
        android:layout_marginStart="28dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="28dp"
        app:cardCornerRadius="60dp">

        <LinearLayout
            android:id="@+id/inf_find"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginStart="25dp"
                android:src="@drawable/svg_store" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/info_find"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_weight="1"
            android:background="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_weight="1"
            android:background="@color/black" />
    </LinearLayout>

</RelativeLayout>